// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:list 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Service"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default"
              data-role="container"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
              >
                <h3
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      简单 List 示例
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__List"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__List-content-wrapper"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__List-main"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__List-fixedTop"
                      />
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__List-items"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right __AMIS_COMPONENT_CLASS_PREFIX__ListItem--hasItemAction"
                          data-index="0"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-actions"
                          >
                            <button
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--link __AMIS_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox __AMIS_COMPONENT_CLASS_PREFIX__Hbox--xs"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      Trident
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      4
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right __AMIS_COMPONENT_CLASS_PREFIX__ListItem--hasItemAction"
                          data-index="1"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-actions"
                          >
                            <button
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--link __AMIS_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox __AMIS_COMPONENT_CLASS_PREFIX__Hbox--xs"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      Trident
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      4
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right __AMIS_COMPONENT_CLASS_PREFIX__ListItem--hasItemAction"
                          data-index="2"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-actions"
                          >
                            <button
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--link __AMIS_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox __AMIS_COMPONENT_CLASS_PREFIX__Hbox--xs"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      Trident
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      4
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right __AMIS_COMPONENT_CLASS_PREFIX__ListItem--hasItemAction"
                          data-index="3"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-actions"
                          >
                            <button
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--link __AMIS_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox __AMIS_COMPONENT_CLASS_PREFIX__Hbox--xs"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      Trident
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      3
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right __AMIS_COMPONENT_CLASS_PREFIX__ListItem--hasItemAction"
                          data-index="4"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-actions"
                          >
                            <button
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--link __AMIS_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox __AMIS_COMPONENT_CLASS_PREFIX__Hbox--xs"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      Trident
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      4
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right __AMIS_COMPONENT_CLASS_PREFIX__ListItem--hasItemAction"
                          data-index="5"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-actions"
                          >
                            <button
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--link __AMIS_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox __AMIS_COMPONENT_CLASS_PREFIX__Hbox--xs"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      Gecko
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      4
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right __AMIS_COMPONENT_CLASS_PREFIX__ListItem--hasItemAction"
                          data-index="6"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-actions"
                          >
                            <button
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--link __AMIS_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox __AMIS_COMPONENT_CLASS_PREFIX__Hbox--xs"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      Gecko
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      5
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right __AMIS_COMPONENT_CLASS_PREFIX__ListItem--hasItemAction"
                          data-index="7"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-actions"
                          >
                            <button
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--link __AMIS_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox __AMIS_COMPONENT_CLASS_PREFIX__Hbox--xs"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      Gecko
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      5
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right __AMIS_COMPONENT_CLASS_PREFIX__ListItem--hasItemAction"
                          data-index="8"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-actions"
                          >
                            <button
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--link __AMIS_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox __AMIS_COMPONENT_CLASS_PREFIX__Hbox--xs"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      Gecko
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      5
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right __AMIS_COMPONENT_CLASS_PREFIX__ListItem--hasItemAction"
                          data-index="9"
                          style="scroll-margin-top: var(--affix-offset-top);"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-actions"
                          >
                            <button
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--link __AMIS_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                查看详情
                              </span>
                            </button>
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox __AMIS_COMPONENT_CLASS_PREFIX__Hbox--xs"
                            >
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Engine
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      Gecko
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Hbox-col"
                              >
                                <div
                                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                                >
                                  <label
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                                  >
                                    Version
                                  </label>
                                  <div
                                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                                  >
                                    <span
                                      class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                                    >
                                      5
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:list with itemAction 1`] = `
<body
  class="is-modalOpened"
  style="width: calc(100% - 0px);"
>
  <div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
      data-amis-theme="cxd"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
            role="page-body"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__List"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__List-content-wrapper"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__List-main"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__List-fixedTop"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__List-heading"
                    >
                      listTitleForTest
                    </div>
                  </div>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__List-items"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right __AMIS_COMPONENT_CLASS_PREFIX__ListItem--hasItemAction"
                      data-index="0"
                      style="scroll-margin-top: var(--affix-offset-top);"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                        >
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                          >
                            Engine
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                            >
                              Trident
                            </span>
                          </div>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                        >
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                          >
                            Version
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                            >
                              4
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right __AMIS_COMPONENT_CLASS_PREFIX__ListItem--hasItemAction"
                      data-index="1"
                      style="scroll-margin-top: var(--affix-offset-top);"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                        >
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                          >
                            Engine
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                            >
                              Trident
                            </span>
                          </div>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                        >
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                          >
                            Version
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                            >
                              4
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right __AMIS_COMPONENT_CLASS_PREFIX__ListItem--hasItemAction"
                      data-index="2"
                      style="scroll-margin-top: var(--affix-offset-top);"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                        >
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                          >
                            Engine
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                            >
                              Trident
                            </span>
                          </div>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                        >
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                          >
                            Version
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                            >
                              4
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget __AMIS_COMPONENT_CLASS_PREFIX__Modal __AMIS_COMPONENT_CLASS_PREFIX__Modal--1th"
    data-amis-theme="cxd"
    role="dialog"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-overlay in"
    />
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-content in"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-header"
      >
        <a
          class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            class="icon icon-close"
            icon="close"
          />
        </a>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-title"
        >
          详情
        </div>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-body"
        role="dialog-body"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            当前行的数据 browser: Internet Explorer 4.0, version: 4
          </span>
        </span>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Renderer:list with listItem actions & actionsPosition 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__List"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__List-content-wrapper"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__List-main"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__List-fixedTop"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__List-items"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right"
                    data-index="0"
                    style="scroll-margin-top: var(--affix-offset-top);"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-actions"
                    >
                      <button
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--link __AMIS_COMPONENT_CLASS_PREFIX__Button--size-sm"
                        type="button"
                      >
                        <span>
                          查看详情
                        </span>
                      </button>
                    </div>
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                      >
                        <label
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                        >
                          Engine
                        </label>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Trident
                          </span>
                        </div>
                      </div>
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                      >
                        <label
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                        >
                          Version
                        </label>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            4
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right"
                    data-index="1"
                    style="scroll-margin-top: var(--affix-offset-top);"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-actions"
                    >
                      <button
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--link __AMIS_COMPONENT_CLASS_PREFIX__Button--size-sm"
                        type="button"
                      >
                        <span>
                          查看详情
                        </span>
                      </button>
                    </div>
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                      >
                        <label
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                        >
                          Engine
                        </label>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Trident
                          </span>
                        </div>
                      </div>
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                      >
                        <label
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                        >
                          Version
                        </label>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            4
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right"
                    data-index="2"
                    style="scroll-margin-top: var(--affix-offset-top);"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-actions"
                    >
                      <button
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--link __AMIS_COMPONENT_CLASS_PREFIX__Button--size-sm"
                        type="button"
                      >
                        <span>
                          查看详情
                        </span>
                      </button>
                    </div>
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                      >
                        <label
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                        >
                          Engine
                        </label>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Trident
                          </span>
                        </div>
                      </div>
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                      >
                        <label
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                        >
                          Version
                        </label>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            4
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:list with listItem avatar & avatarClassName 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__List"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__List-content-wrapper"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__List-main"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__List-fixedTop"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__List-items"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right"
                    data-index="0"
                    style="scroll-margin-top: var(--affix-offset-top);"
                  >
                    <span
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-avatar avatarClassNameForTest"
                    >
                      <img
                        alt="..."
                        src="/path/avatar/0"
                      />
                    </span>
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                      >
                        <label
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                        >
                          Engine
                        </label>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Trident
                          </span>
                        </div>
                      </div>
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                      >
                        <label
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                        >
                          Version
                        </label>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            4
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right"
                    data-index="1"
                    style="scroll-margin-top: var(--affix-offset-top);"
                  >
                    <span
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-avatar avatarClassNameForTest"
                    >
                      <img
                        alt="..."
                        src="/path/avatar/1"
                      />
                    </span>
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                      >
                        <label
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                        >
                          Engine
                        </label>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Trident
                          </span>
                        </div>
                      </div>
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                      >
                        <label
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                        >
                          Version
                        </label>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            4
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right"
                    data-index="2"
                    style="scroll-margin-top: var(--affix-offset-top);"
                  >
                    <span
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-avatar avatarClassNameForTest"
                    >
                      <img
                        alt="..."
                        src="/path/avatar/2"
                      />
                    </span>
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                      >
                        <label
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                        >
                          Engine
                        </label>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Trident
                          </span>
                        </div>
                      </div>
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                      >
                        <label
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                        >
                          Version
                        </label>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            4
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:list with listItem title & titleClassName & subTitle & desc 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__List"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__List-content-wrapper"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__List-main"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__List-fixedTop"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__List-items"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right"
                    data-index="0"
                    style="scroll-margin-top: var(--affix-offset-top);"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                    >
                      <p
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-title classForItemTitle"
                      >
                        Win 95+
                      </p>
                      <div>
                        <small
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-subtitle"
                        >
                          等级为：A
                        </small>
                      </div>
                      <span
                        class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          this is list item desc
                        </span>
                      </span>
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                      >
                        <label
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                        >
                          Engine
                        </label>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Trident
                          </span>
                        </div>
                      </div>
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                      >
                        <label
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                        >
                          Version
                        </label>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            4
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right"
                    data-index="1"
                    style="scroll-margin-top: var(--affix-offset-top);"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                    >
                      <p
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-title classForItemTitle"
                      >
                        Win 95+
                      </p>
                      <div>
                        <small
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-subtitle"
                        >
                          等级为：B
                        </small>
                      </div>
                      <span
                        class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          this is list item desc
                        </span>
                      </span>
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                      >
                        <label
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                        >
                          Engine
                        </label>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Trident
                          </span>
                        </div>
                      </div>
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                      >
                        <label
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                        >
                          Version
                        </label>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            4
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem __AMIS_COMPONENT_CLASS_PREFIX__ListItem--actions-at-right"
                    data-index="2"
                    style="scroll-margin-top: var(--affix-offset-top);"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-content"
                    >
                      <p
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-title classForItemTitle"
                      >
                        Win 95+
                      </p>
                      <div>
                        <small
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-subtitle"
                        >
                          等级为：C
                        </small>
                      </div>
                      <span
                        class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          this is list item desc
                        </span>
                      </span>
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                      >
                        <label
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                        >
                          Engine
                        </label>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Trident
                          </span>
                        </div>
                      </div>
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-field"
                      >
                        <label
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldLabel"
                        >
                          Version
                        </label>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ListItem-fieldValue"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            4
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:list with title & header & footer & headerClassName & footerClassName 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__List"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__List-content-wrapper"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__List-main"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__List-fixedTop"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__List-header headerTplClassName"
                  >
                    <span
                      class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                    >
                      <span>
                        头部标题
                      </span>
                    </span>
                  </div>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__List-heading"
                  >
                    listTitleForTest
                  </div>
                </div>
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__List-placeholder"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      暂无数据
                    </span>
                  </span>
                </div>
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__List-footer footerButtonClassName"
                >
                  <button
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
                    type="button"
                  >
                    <span>
                      底部按钮
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
